syntax = "proto3";

package product;
option csharp_namespace = "ProductGrpc.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetAllProducts (GetAllProductsRequest) returns ( stream ProductModel);

  rpc AddProduct (AddProductRequest) returns (ProductModel);
  rpc UpdateProducts (UpdateProductRequest) returns (ProductModel);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);

  rpc InsertBulkProduct (stream ProductModel) returns (InsertBulkProductResponse);
  rpc Test (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetProductRequest {
  int32 productId = 1;
}

message GetProductResponse {
  oneof product {
    bool product_null = 1;  // always set this to "true" when null
    ProductModel product_value = 2;
  }
}

message GetAllProductsRequest {}

message AddProductRequest {
  ProductModel product = 1;
}

message UpdateProductRequest {
  ProductModel product = 1;
}

message DeleteProductRequest {
  int32 productId = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message InsertBulkProductResponse {
  bool success = 1;
  int32 insertCount = 2;
}

message ProductModel {
  int32 productId = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  ProductStatus status = 5;
  google.protobuf.Timestamp createdTime = 6;
}

enum ProductStatus {
  PRODUCT_STATUS_UNSPECIFIED = 0;
  PRODUCT_STATUS_INSTOCK = 1;
  PRODUCT_STATUS_LOW = 2;
  PRODUCT_STATUS_NONE = 3;
}